infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  labels:
    app: ecommerce
    managed-by: argocd
  annotations:
    # ALB Type 
    argocd.argoproj.io/sync-wave: "5"
    argocd.argoproj.io/sync-options: "SkipDryRunOnMissingResource=true"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    #  Subnets (public) 
    alb.ingress.kubernetes.io/subnets-auto-discover: "true"

    # Security 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # Health Check 
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"

    # ALB Attributes 
    alb.ingress.kubernetes.io/load-balancer-attributes: |
      idle_timeout.timeout_seconds=60,
      deletion_protection.enabled=false,
      routing.http2.enabled=true

    # Tags 
    alb.ingress.kubernetes.io/tags: |
      Environment=dev,
      Project=ecommerce-devopsify,
      ManagedBy=argocd

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      # API Gateway (main entry point) 
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

      - path: /api/inventory
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

      - path: /api/shipping
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

      - path: /api/notifications
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

      - path: /actuator
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
